# fastrtc

./: .gitignore  404.html  README.md  index.html  justfile  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml  upload_space.py
.github/workflows/: docs.yml  tests-frontend.yml  tests.yml
advanced-configuration/: index.html
backend/fastrtc/: __init__.py  credentials.py  reply_on_pause.py  reply_on_stopwords.py  stream.py  tracks.py  utils.py  webrtc.py  webrtc_connection_mixin.py  websocket.py
backend/fastrtc/pause_detection/: __init__.py  protocol.py  silero.py
backend/fastrtc/speech_to_text/: __init__.py  stt_.py
backend/fastrtc/templates/component/: index.js  style.css
backend/fastrtc/templates/example/: index.js  style.css
backend/fastrtc/text_to_speech/: __init__.py  test_tts.py  tts.py
cookbook/: index.html
demo/gemini_audio_video/: README.md  app.py  requirements.txt
demo/gemini_conversation/: README.md  app.py
demo/llm_voice_chat/: app.py
demo/moonshine_live/: app.py
demo/nextjs_voice_chat/: run.sh
demo/nextjs_voice_chat/backend/: server.py
demo/nextjs_voice_chat/frontend/fastrtc-demo/: package.json
demo/nextjs_voice_chat/frontend/fastrtc-demo/app/: globals.css  page.tsx
demo/nextjs_voice_chat/frontend/fastrtc-demo/components/: background-circle-provider.tsx
demo/nextjs_voice_chat/frontend/fastrtc-demo/components/ui/: background-circles.tsx
demo/nextjs_voice_chat/frontend/fastrtc-demo/lib/: webrtc-client.ts
demo/patient_intake/: app.py
demo/qwen_phone_chat/: README.md  app.py  requirements.txt
demo/send_text_or_audio/: app.py  index.html
demo/talk_to_azure_openai/: README.md  README_gradio.md  app.py  index.html  requirements.txt
demo/talk_to_claude/: app.py
demo/talk_to_gemini/: README.md  README_gradio.md  app.py  index.html  requirements.txt
demo/talk_to_llama4/: README.md  app.py  index.html  requirements.txt
demo/talk_to_openai/: README.md  README_gradio.md  app.py  index.html  requirements.txt
demo/talk_to_sambanova/: README.md  README_gradio.md  app.py  index.html  requirements.txt
demo/talk_to_smolagents/: README.md  app.py
demo/voice_text_editor_local/: app.py
demo/webrtc_vs_websocket/: app.py  index.html
demo/whisper_realtime/: README_gradio.md  app.py  index.html  requirements.txt
deployment/: index.html
docs/: advanced-configuration.md  cookbook.md  deployment.md  index.md  speech_to_text_gallery.md  text_to_speech_gallery.md  turn_taking_gallery.md  vad_gallery.md
docs/reference/: credentials.md  reply_on_pause.md  stream.md  stream_handlers.md
docs/userguide/: api.md  audio.md  video.md
faq/: index.html
frontend/: Example.svelte  Index.svelte  package-lock.json  package.json
frontend/shared/: InteractiveAudio.svelte  InteractiveVideo.svelte  MicrophoneMuted.svelte  StaticAudio.svelte  StaticVideo.svelte  Webcam.svelte  WebcamPermissions.svelte  webrtc_utils.ts
reference/credentials/: index.html
reference/reply_on_pause/: index.html
reference/stream/: index.html
reference/stream_handlers/: index.html
reference/utils/: index.html
speech_to_text_gallery/: index.html
test/: test_tts.py  test_utils.py  test_webrtc_connection_mixin.py
text_to_speech_gallery/: index.html
turn_taking_gallery/: index.html
userguide/api/: index.html
userguide/audio/: index.html
userguide/audio-video/: index.html
userguide/gradio/: index.html
userguide/streams/: index.html
userguide/video/: index.html
userguide/webrtc_docs/: index.html
userguide/websocket_docs/: index.html
utils/: index.html
